--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ header {
 <header>
   <div class="navbar">
     <div class="logo-container">
-      <img src="logo.jpg" alt="School Logo">
+      <img src="images/logo.jpg" alt="School Logo"> 
       <div class="logo-text">
         <h1>VATHSALYAM</h1>
         <p>Special School for Intellectual Children</p>
@@ -147,7 +147,7 @@ header {
     </p>
   </div>
   <div style="flex: 1; min-width: 250px; display: flex; justify-content: center;">
-    <img src="about.jpg" alt="About Us" style="width: 100%; max-width: 400px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+    <img src="images/about.jpg" alt="About Us" style="width: 100%; max-width: 400px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
   </div>
 </section>
 
@@ -183,63 +183,63 @@ header {
 
     <!-- SERVICE 1 -->
     <div class="service-card slide-left">
-      <img src="service1.jpg" alt="Training for Autism" />
+      <img src="images/service1.jpg" alt="Training for Autism" />
       <h3>Training for Autism Students</h3>
       <p>We are providing training for Autism students & some students after necessary rehabilitation and training have gone back to mainstream schools.</p>
     </div>
 
     <!-- SERVICE 2 -->
     <div class="service-card slide-right">
-      <img src="service2.jpg" alt="Vocational Training" />
+      <img src="images/service2.jpeg" alt="Vocational Training" />
       <h3>Vocational Training</h3>
       <p>Vocational Training Centre are designed to enable a differently abled person to secure and retain suitable employment.</p>
     </div>
 
     <!-- SERVICE 3 -->
     <div class="service-card slide-left">
-      <img src="service3.jpg" alt="Yoga" />
+      <img src="images/service3.jpg" alt="Yoga" />
       <h3>Yoga</h3>
       <p>Children with special needs have various physical and mental disabilities which affect their mental attitude.</p>
     </div>
 
     <!-- SERVICE 4 -->
     <div class="service-card slide-right">
-      <img src="service4.jpg" alt="Occupational Therapy" />
+      <img src="images/service4.jpeg" alt="Occupational Therapy" />
       <h3>Occupational Therapy</h3>
       <p>Helps students increase functional independence in daily life; assessments are conducted by occupational therapists.</p>
     </div>
 
     <!-- SERVICE 5 -->
     <div class="service-card slide-left">
-      <img src="service5.jpg" alt="Physiotherapy" />
+      <img src="service5.jpeg" alt="Physiotherapy" />
       <h3>Physiotherapy</h3>
       <p>Reduces physical deformities and increases mobility, making children more active and confident.</p>
     </div>
 
     <!-- SERVICE 6 -->
     <div class="service-card slide-right">
-      <img src="service6.jpg" alt="Speech Therapy" />
+      <img src="images/service6.jpeg" alt="Speech Therapy" />
       <h3>Speech Therapy</h3>
       <p>Supports cognitive and social development in children with developmental disabilities.</p>
     </div>
 
     <!-- SERVICE 7 -->
     <div class="service-card slide-left">
-      <img src="service7.jpg" alt="Special Education" />
+      <img src="images/service7.jpg" alt="Special Education" />
       <h3>Special Education</h3>
       <p>Training for body movement, hygiene, language, reading, writing, social skills, and more by qualified teachers.</p>
     </div>
 
     <!-- SERVICE 8 -->
     <div class="service-card slide-right">
-      <img src="service8.jpg" alt="Medical Checkup" />
+      <img src="images/service8.jpg" alt="Medical Checkup" />
       <h3>Medical Checkup</h3>
       <p>Bi-annual checkups with monthly medicine supply; each student is assessed for abilities and development.</p>
     </div>
 
     <!-- SERVICE 9 -->
     <div class="service-card slide-left">
-      <img src="service9.jpg" alt="Healthy Foods" />
+      <img src="images/service9.jpg" alt="Healthy Foods" />
       <h3>Healthy Foods</h3>
       <p>Nutritious foods like sprouts, nuts, fruits, and vegetables are provided to boost immunity and health.</p>
     </div>
@@ -344,3 +344,4 @@ scrollBtn.onclick = function() {
 
 </body>
 </html>
+
