--- a/index.html
+++ b/index.html
@@ -1,136 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VATHSALYAM - Special School</title>
-<style>
-/* ==== GLOBAL RESET ==== */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  background-color: #fff;
-  color: #333;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VATHSALYAM - Special School for Intellectual Children</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+        }
 
-/* ==== HEADER ==== */
-header {
-  background: linear-gradient(to right, #ff9933, #ffcc66);
-  color: white;
-  padding: 15px 20px;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
+        /* Header */
+        header {
+            background: linear-gradient(to right, #ff9933, #ffffff, #138808); /* saffron-white-green */
+            display: flex;
+            align-items: center;
+            padding: 10px 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
 
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
+        header img {
+            height: 80px;
+            width: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-right: 15px;
+            border: 3px solid white;
+            background-color: white;
+        }
 
-.logo-container {
-  display: flex;
-  align-items: center;
-}
-.logo-container img {
-  width: 70px;
-  height: 70px;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 3px solid white;
-  margin-right: 10px;
-}
-.logo-text h1 {
-  font-size: 2.5rem;
-  font-weight: bold;
-}
-.logo-text p {
-  font-size: 1.1rem;
-}
+        .header-text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            line-height: 1.2; /* reduced gap between lines */
+        }
 
-/* ==== NAVIGATION ==== */
-.nav-links {
-  display: flex;
-  gap: 20px;
-}
-.nav-links a {
-  font-weight: bold;
-  padding: 5px 10px;
-  transition: background 0.3s;
-}
-.nav-links a:hover {
-  background: rgba(255,255,255,0.2);
-  border-radius: 5px;
-}
+        .school-name {
+            font-size: 3.5rem;
+            font-weight: bold;
+            margin: 0 0 5px 0; /* tighter spacing */
+            color: #222;
+        }
 
-/* ==== TOGGLE MENU ==== */
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-}
-.menu-toggle span {
-  height: 3px;
-  width: 25px;
-  background: white;
-  margin: 4px 0;
-  border-radius: 2px;
-}
+        .tagline {
+            font-size: 1.6rem;
+            margin: 0 0 5px 0;
+            color: #444;
+        }
 
-/* ==== RESPONSIVE ==== */
-@media(max-width: 768px) {
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    background: linear-gradient(to right, #ff9933, #ffcc66);
-  }
-  .nav-links.active {
-    display: flex;
-  }
-  .menu-toggle {
-    display: flex;
-  }
-}
-</style>
+        .project-tagline {
+            font-size: 1.2rem;
+            margin: 0;
+            color: #666;
+        }
+
+        /* Navigation */
+        nav {
+            margin-left: auto;
+        }
+
+        nav ul {
+            display: flex;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            margin: 0 10px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #222;
+            font-weight: bold;
+            padding: 8px 12px;
+            transition: background 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            background: rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
 
-<!-- ==== HEADER START ==== -->
 <header>
-  <div class="navbar">
-    <div class="logo-container">
-      <img src="images/logo.jpg" alt="School Logo"> 
-      <div class="logo-text">
-        <h1>VATHSALYAM</h1>
-        <p>Special School for Intellectual Children</p>
-        <small>SevaBharathi's Special Project</small>
-      </div>
+    <img src="images/logo.jpg" alt="School Logo">
+    <div class="header-text">
+        <div class="school-name">VATHSALYAM</div>
+        <div class="tagline">Special School for Intellectual Children</div>
+        <div class="project-tagline">SevaBharathi's Special Project</div>
     </div>
-    <div class="menu-toggle" id="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="nav-links" id="nav-links">
-      <a href="#about">About</a>
-      <a href="#vision-mission">Vision & Mission</a>
-      <a href="#services">Services</a>
-      <a href="#contact">Contact</a>
-    </div>
-  </div>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#vision">Vision</a></li>
+            <li><a href="#mission">Mission</a></li>
+            <li><a href="#services">Services</a></li>
+        </ul>
+    </nav>
 </header>
+
 <!-- ==== HEADER END ==== -->
 <!-- ==== ABOUT US SECTION ==== -->
 <section id="about" style="padding: 50px 20px; display: flex; align-items: center; gap: 30px; flex-wrap: wrap;">
@@ -344,4 +320,5 @@ scrollBtn.onclick = function() {
 
 </body>
 </html>
+
 
