--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </p>
   </div>
   <div style="flex: 1; min-width: 250px; display: flex; justify-content: center;">
-    <img src="images/about.jpg" alt="About Us" style="width: 100%; max-width: 400px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+    <img src="images/about.avif" alt="About Us" style="width: 100%; max-width: 400px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
   </div>
 </section>
 
@@ -320,5 +320,6 @@ scrollBtn.onclick = function() {
 
 </body>
 </html>
+
 
 
